Fixed alignments

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,19 @@ body {
   text-align: center;
 }
 
+.button_b {
+  color: white;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 100;
+  padding: 1;
+  letter-spacing: 5px;
+  border: 1px solid white;
+  text-align: center;
+  display: block;
+  margin-top: 5%;
+}
+
 .button_s {
   color: white;
   font-size: 1rem;
